--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <!DOCTYPE html>
  <html xmlns="http://www.w3.org/1999/xhtml">
      <head>
-         <title>PORTFOLIO</title>
+         <title>HAPPY FRYDAY</title>
          <meta charset="utf-8" />
          <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'/>
          <link href="mystyles.css" rel="stylesheet"/>
@@ -12,29 +12,24 @@
      <body>
          <div id="container">
          <header>
-             <h1>My Design Portfolio</h1>
+             <h1>HAPPY FRYDAY</h1>
          </header>
          <nav>
              <ul>
                  <li><a href="index.html">Home</a></li>
-                 <li><a href="jazz2015.html">Jazz 2015</a></li>
-                 <li><a href="palace.html">Parable of the Palace</a></li>
+                 <li><a href="jazz2015.html">Fries</a></li>
+                 <li><a href="palace.html">Other stuff</a></li>
              </ul>
          </nav>
          
              <div id="content">
              <header>
-                 <h2>Welcome to my portfolio</h2>
+                 <h2>Goings on this Fryday</h2>
              </header>
-             <p>Thank you for visiting and taking the time to explore the site. I invite you to click
-                 around the links that you will find here to learn more about my design and
-                 development background, skills, process, portfolio, and experience. Feel free to
-                 contact me for any additional information.</p>
+             <p>Something something Fryday. Something else, something else, something else. Fryday. Rachel.</p>
              
-            <div class="center"> <h3>My background</h3></div>
-             <p>I am not a professional web designer or trained developer. However, I have extensive
-                 experience in related fields and was awarded merit-based scholarship and worked as a
-                 graduate assistant my time at university.</p>
+            <div class="center"> <h2>My background</h2></div>
+             <p>More stuff about fries. Poutine? Poutine. Below this everything becomes about the actual portfolio I'm making for class... (it's just random nonsense, don't pay any of it any mind).</p>
              <figure class="left">
                  <img src="images/trilogy.jpg" width="100" alt="Beckett's Trilogy" />
                  <figcaption>Beckett <cite>Trilogy</cite></figcaption>
