--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
              </header>
              <p>Something something Fryday. Something else, something else, something else. Fryday. Rachel.</p>
              
-            <div class="center"> <h2>My background</h2></div>
+            <div class="center"> <h2>Bygone Frydays</h2></div>
              <p>More stuff about fries. Poutine? Poutine. Below this everything becomes about the actual portfolio I'm making for class... (it's just random nonsense, don't pay any of it any mind).</p>
              <figure class="left">
                  <img src="images/trilogy.jpg" width="100" alt="Beckett's Trilogy" />
